# github-action-start

./: .flake8  .gitignore  README.md  pyproject.toml
.github/workflows/: github-actions-demo.yml  lint.yml  test.yml
src/app/: __init__.py  main.py
tests/: test_main.py
